japy/proxy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/app1/" }
                          route: { cluster: app1 , prefix_rewrite: "/"}
                        - match: { prefix: "/app1" }
                          route: { cluster: app1 , prefix_rewrite: "/"}
                        - match: { prefix: "/app2/" }
                          route: { cluster: app2 , prefix_rewrite: "/"}
                        - match: { prefix: "/app2" }
                          route: { cluster: app2 , prefix_rewrite: "/"}
                        - match: { prefix: "/app3/" }
                          route: { cluster: app3 , prefix_rewrite: "/"}
                        - match: { prefix: "/app3" }
                          route: { cluster: app3 , prefix_rewrite: "/"}
                        - match: { prefix: "/app4/" }
                          route: { cluster: app4 , prefix_rewrite: "/"}
                        - match: { prefix: "/app4" }
                          route: { cluster: app4 , prefix_rewrite: "/"}
                        - match: { prefix: "/app5/" }
                          route: { cluster: app5 , prefix_rewrite: "/"}
                        - match: { prefix: "/app5" }
                          route: { cluster: app5 , prefix_rewrite: "/"}
                http_filters:
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      http_service:
                        server_uri:
                          uri: opa.dev
                          cluster: opa
                          timeout: 0.25s
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: app1
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: app1
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app1.dev
                  port_value: 80
    - name: app2
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: app2
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app2.dev
                  port_value: 80
    - name: app3
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: app3
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app3.dev
                  port_value: 80
    - name: app4
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: app4
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app4.dev
                  port_value: 80
    - name: app5
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: app5
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app5.dev
                  port_value: 80
    
    - name: opa
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app5
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: opa.dev
                  port_value: 8080
      
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
